# orbitals

./: .gitignore  .prettierrc  CMakeLists.txt  Makefile  README.md  app.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js  tsconfig.json  wasm.data  wasm.wasm
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yaml
_app/: version.json
_app/immutable/assets/: 0.45cc9306.css  0.e584502f.css  _layout.0fc49b7b.css  _layout.4a911881.css  _layout.61da23fb.css  _layout.e87bb477.css
_app/immutable/chunks/: 0.052fc291.js  0.6bb820dd.js  0.7a12c0fc.js  0.86609f58.js  1.37bd4a73.js  1.68adc182.js  1.a59c785e.js  1.be3a2ce0.js  2.948f1f35.js  index.9480644d.js  index.e1631e9e.js  paths.14914960.js  paths.6f22c5fc.js  paths.8a05307e.js  paths.c81b072b.js  paths.da0fe86f.js  paths.e643dc49.js  singletons.15836914.js  singletons.22823a38.js  singletons.b59ff372.js  singletons.e440828b.js  singletons.e8edaa83.js  singletons.f729f45b.js
_app/immutable/entry/: _layout.svelte.26fb4323.js  _layout.svelte.2a55b855.js  _layout.svelte.7715ef07.js  _layout.svelte.ac90937a.js  _page.svelte.d8e418f1.js  app.110a3340.js  app.589affe4.js  app.7d813680.js  app.c255629a.js  app.cce40f23.js  app.e81412e1.js  error.svelte.0155c3d7.js  error.svelte.2893da27.js  error.svelte.6fd68739.js  error.svelte.b861aaad.js  start.32e28372.js  start.35972f29.js  start.b36b21d0.js  start.b40235e5.js  start.babe49dd.js  start.ebed957a.js
_app/immutable/nodes/: 0.88c3b3e8.js  0.a3073fcf.js  1.89d700d9.js  1.ae202510.js  2.78d52146.js
src/cpp/: CMakeLists.txt  Orbitals.cpp  Orbitals.hpp  orbital.cpp  orbital.hpp  orbitals.cpp  sample_scene.hpp
src/cpp/assets/shaders/: debug_texture.frag  debug_texture.vert  shadow_map.frag
src/cpp/engine/: CMakeLists.txt  Camera.cpp  Camera.hpp  IndexBuffer.cpp  IndexBuffer.hpp  InputEvents.cpp  InputEvents.hpp  Shader.cpp  Shader.hpp  Vertex.cpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp  VertexLayout.cpp  application.cpp  application.hpp  buffer.cpp  buffer.hpp  buffer.inl  camera.cpp  camera.hpp  camera_movement.cpp  camera_movement.hpp  clock.cpp  clock.hpp  debug.cpp  drawable.hpp  event.hpp  glDebug.cpp  glDebug.hpp  index_buffer.cpp  index_buffer.hpp  input_events.cpp  input_events.hpp  inputs.cpp  inputs.hpp  (+36 more)
src/cpp/engine/io/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp  viewport.cpp  viewport.hpp
src/cpp/engine/primitives/: buffer.hpp  buffer.inl  debug.cpp  frame_buffer.cpp  frame_buffer.hpp  gl_object.cpp  gl_object.hpp  index_buffer.hpp  render_buffer.cpp  render_buffer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  transform.cpp  transform.hpp  uniform_buffer.hpp  vertex.cpp  vertex.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_layout.cpp  vertex_layout.hpp
src/cpp/imgui/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/cpp/libraries/: CMakeLists.txt
src/cpp/libraries/imgui/: CMakeLists.txt  imconfig.h  imgui_impl_opengl3_loader.h
src/cpp/libraries/stb/: CMakeLists.txt  stb_image.h
src/cpp/math/: CMakeLists.txt  RadialFunction.cpp  SphericalHarmonics.cpp  SphericalHarmonics.hpp  bohr.cpp  bohr.hpp  coordinates.cpp  coordinates.hpp  math.cpp  math.hpp  matrix.hpp  matrix.inl  matrix_generic_mat4.inl  matrix_generic_square_mat.inl  matrix_mat.inl  projection_matrix.hpp  quaternion.hpp  quaternion.inl  radial_function.cpp  radial_function.hpp  spherical_harmonics.cpp  spherical_harmonics.hpp  trigonometry.cpp  trigonometry.hpp  vector.hpp  vector_generic_vec2.inl  vector_generic_vec3.inl  vector_generic_vec4.inl  vector_vec.inl  view_matrix.hpp  wave_function.cpp  wave_function.hpp
src/cpp/shaders/: basic.frag  basic.vert  debug_texture.frag  shadow_map.frag  shadow_map.vert
src/cpp/util/: CMakeLists.txt  assert.hpp  fetch.cpp  fetch.hpp  fs.cpp  fs.hpp  listeners_manager.hpp  listeners_manager.inl  performance.cpp  performance.hpp
src/cpp/widget/: CMakeLists.txt  debug.cpp  debug.hpp  orbital.cpp  orbital.hpp  widget.cpp  widget.hpp
src/frontend/routes/: +layout.svelte  +page.svelte
src/routes/: +page.svelte
test/cpp/: CMakeLists.txt  Tests.cpp  test_util.hpp
test/cpp/engine/: transform.test.hpp
test/cpp/math/: CMakeLists.txt  SphericalHarmonics.test.hpp  coordinates.test.hpp  math.test.hpp  matrix.test.hpp  quaternion.test.hpp  radial_function.test.hpp  trigonometry.test.hpp  (+3 more)
(+3 files in other folders)
