cmake_minimum_required(VERSION 3.21)

add_library(engine
	application.cpp
	camera.cpp
	camera_movement.cpp
	clock.cpp
	inputs.cpp
	keyboard.cpp
	light.cpp
	material.cpp
	mesh.cpp
	mouse.cpp
	renderer.cpp
	scene.cpp
	texture_test.cpp
	viewport.cpp
	primitives/debug.cpp
	primitives/frame_buffer.cpp
	primitives/gl_object.cpp
	primitives/index_buffer.cpp
	primitives/render_buffer.cpp
	primitives/shader.cpp
	primitives/texture.cpp
	primitives/transform.cpp
	primitives/vertex_array.cpp
	primitives/vertex_layout.cpp
	primitives/vertex.cpp
)